# four_factors_app

./: .gitignore  README.md  pyproject.toml
four_factors_app/data/: four_factors.csv
four_factors_app/notebooks/: WarmUp_NBA_Wins_Pred.ipynb  WarmUp_NBA_Wins_Retro.ipynb
four_factors_app/src/: data_processing.py  main.py  main_old.py  utils.py
four_factors_app/src/pages/: eda.py  predictive_analysis.py  retrospective_analysis.py
