[tool.poetry]
name = "four-factors-app"
version = "0.1.0"
description = ""
authors = ["samluxenberg1 <samluxenberg1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.15.1"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
